# ai_1_tasks_ucu

./: README.md  pyproject.toml  respuestas_1.md  respuestas_2.md  respuestas_4.md  submission.md
src/: data.py  ex_2.py  ex_4.py
