[project]
name = "exercise-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "data-science-types>=0.2.23",
    "matplotlib>=3.10.5",
    "microsoft-python-type-stubs",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "typer>=0.16.1",
]

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }
